--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <br>
 <br>
 <br>
-<U><h6>OUR MISSION</h6></U>
+<U><h6>Our Services</h6></U>
 <br>
 <h3 style="font-size:5vw;">We are the design organisation <br> that provide well aesthetic & more ingenuity product to our clients.</h3>
 <center>
