--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width="initial-scale=1">
 
-<B><h2>AASHIRWAD PRINTERS</h2></B>
+<B><h2 style="font-size:10vw;">AASHIRWAD PRINTERS</h2></B>
 <title>www.aashirwadprinters.com</title>
 
 <link rel="stylesheet" href="Aashirwad.css">
