--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <br>
 <U><h6>Our Services</h6></U>
 <br>
-<h3 style="font-size:5vw;">We are the design organisation that provide <br>well aesthetic & more ingenuity product to our clients.</h3>
+<h3 style="font-size:5vw;">Resize the browser window to see how the text size scales.</p>;">We are the design organisation that provide <br>well aesthetic & more ingenuity product to our clients.</h3>
 <center>
 <br>
 <br>
