--- a/index.html
+++ b/index.html
@@ -2,8 +2,6 @@
 <html oncontextmenu="return false;" >
 <head>
 <meta name="viewport" content="width=device-width="initial-scale=1">
-
-<B><h2>AASHIRWAD PRINTERS</h2></B>
 <title>www.aashirwadprinters.com</title>
 
 <link rel="stylesheet" href="Aashirwad.css">
@@ -20,9 +18,11 @@
 <br>
 <br>
 <br>
-<U><h6>Our Services</h6></U>
-<br>
-<h3 style="font-size:5vw;">We are the design organisation <br> that provide well aesthetic & more ingenuity product to our clients.</h3>
+
+ <div class="container">
+ <h1>AASHIRWAD PRINTERS</h1>
+ <H2>We are the design organisation that provide well aesthetic & more ingenuity products to our clients.</H2>
+
 <center>
 <br>
 <br>
