--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
  <div class="container">
  <h1>AASHIRWAD PRINTERS</h1>
- <H2>We are the design organisation that provide well aesthetic & more ingenuity products to our clients.</H2>
+ <H2>We are the design organisation that provide <br> well aesthetic & more ingenuity products to our clients.</H2>
 
 <center>
 <br>
